# apple-reminders

./: .gitignore  .goosehints  Package.swift  README.md  TodayReminders.entitlements  build.py  devenv.nix  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml
Sources/TodayReminders/: RemindersLib.swift
Sources/TodayReminders/include/: RemindersLib.h
src/apple_reminders/: __init__.py  client.py  ffi.py  mock.py  rem.py  test_helper.py  types.py
tests/: test_cli.py  test_client.py  test_mock.py  test_models.py  test_reminders.py  test_reminders_api.py
