[project]
name = "apple-reminders"
version = "0.1.0"
description = "A Python library for interacting with Apple's Reminders app"
authors = [
    { name = "Luiz Ribeiro", email = "luizribeiro@gmail.com" },
]
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
keywords = ["apple", "reminders", "macos", "eventkit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.scripts]
rem = "apple_reminders.rem:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "build>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/apple_reminders/**/*.py",
    "src/apple_reminders/lib/*.dylib"
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=apple_reminders --cov-report=term-missing --timeout=3"
timeout = 3

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]
ignore = ["E501"]  # line length violations

[tool.ruff.lint.isort]
known-first-party = ["apple_reminders"]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
packages = ["apple_reminders"]
